# EQ_test_OCR

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  SECURITY.md  deploy-all.sh
archive/gas/: README.md  sync-gas.sh
gas/: .claspignore  ApiRouter.gs  CheqScoring.gs  Code.production.gs  Index.html
ocr-api/: .dockerignore  Dockerfile  Makefile  README.md  cli.py  main.py  pyproject.toml
ocr-api/src/: drive_client.py  recognizer.py  sample.py  scoresheet_recognizer.py  scoresheet_sample.py  sheet_layout.py  upload_validation.py
ocr-api/tests/: test_callback_client.py  test_drive_client.py  test_recognize_sync.py  test_recognizer.py  test_scoresheet_recognizer.py  test_upload_validation.py
scoring-api/: .dockerignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
scoring-api/scripts/: migrate_sheets_to_d1.py
scoring-api/src/: __init__.py  candidate_documents.py  config.py  handlers.py  pdf.py  recognizer.py  repository.py  scoresheet_digit_map.json  scoresheet_grid.py  scoresheet_layout.py  scoresheet_recognizer.py  scoring.py  security.py  sheets.py  upload_recognition.py  upload_storage.py  wire.py
scoring-api/tests/: test_candidate_documents.py  test_config.py  test_handlers.py  test_health.py  test_migrate_sheets_to_d1.py  test_pdf.py  test_render_pdf.py  test_repository_headers.py  test_scoring.py  test_security.py  test_upload_recognition.py  test_upload_storage.py  test_wire.py
scoring-core/: package.json
scoring-core/src/: cheqScoring.js
web/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  wrangler.toml
(+90 files in other folders)
