[project]
name = "ocr-api"
version = "0.1.0"
description = "CHEQ採点用紙のマーク検出API (Cloud Run)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "opencv-python-headless>=4.10",
    "numpy>=2.0",
    "pypdfium2>=4.30",
    "starlette>=1.3.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
]
