[project]
name = "scoring-api"
version = "0.1.0"
description = "CHEQ scoring API (Cloud Run)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "google-auth>=2.38",
    "google-api-python-client>=2.160",
    "weasyprint>=63.0",
    "opencv-python-headless>=4.13.0.92",
    "numpy>=2.5.0",
    "pypdfium2>=5.10.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "pypdf>=6.14.2",
]
