[project]
name = "scoring-api"
version = "0.1.0"
description = "CHEQ scoring API (Cloud Run)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "weasyprint>=63.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "pypdf>=6.14.2",
]
